Fixed tooltip overflow bug
fixed bug where tooltips caused overflow which tampers with the background main

--- a/home/index.css
+++ b/home/index.css
@@ -160,6 +160,7 @@ socialitem:hover img
 
 tooltip
 {
+    --visibility: 0;
     position: absolute;
     z-index: 1;
     pointer-events: none;
@@ -168,7 +169,7 @@ tooltip
     white-space: nowrap;
     margin: 0;
     overflow: visible;
-    transition: 0.25s;
+    opacity: var(--visibility);
 }
 
 tooltip *
